--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>xordle</title>
-    <script data-goatcounter="https://xordle.goatcounter.com/count"
+    <title>fibble</title>
+    <script data-goatcounter="https://fibble.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
