--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>fibble</title>
+    <title>Fibble</title>
     <script data-goatcounter="https://fibble.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
     <script>
